--- a/src/app/styles/engangsstonad.less
+++ b/src/app/styles/engangsstonad.less
@@ -66,7 +66,12 @@
             padding-top: 0.5rem;
         }
         .noOfChildrenSelect {
+            margin-top: 1rem;
             width: 20%;
+
+            .skjemaelement__label {
+              font-weight: bold;
+            }
         }
         .stegindikatorWrapper {
             position: relative;
@@ -79,7 +84,9 @@
         }
         .datovelger__outer {
             margin-top: 1rem;
-            .skjemaelement__label {
+            margin-bottom: 1rem;
+
+          .skjemaelement__label {
                 margin-top: 12px;
                 font-weight: bold;
             }
@@ -87,7 +94,7 @@
         .radioPanelGruppe {
             .skjema__legend {
                 font-size: 16px;
-                margin-bottom: 8px;
+                margin-bottom: 0.5rem;
             }
         }
         .radioPanelGruppe:not(:first-child) {
